JC: added bootstrap to simple_form. remove div main_body in views. spec passes.

--- a/app/views/user_manualx/manuals/_form.html.erb
+++ b/app/views/user_manualx/manuals/_form.html.erb
@@ -2,6 +2,7 @@
   <%= render inline: @erb_code %>
   
 <% else %>
+<h4><%=@title %></h4>
 <%= simple_form_for @manual do |f| %>    
  
   <%= f.input :subject, :label => t('Subject') %>  
