--- a/app/views/user_manualx/manuals/_form_list.html.erb
+++ b/app/views/user_manualx/manuals/_form_list.html.erb
@@ -3,7 +3,8 @@
 <% else %>
 
 <div id="main_body">
-<div class="byop_pagination"><%= will_paginate models %></div>
+	<h4><%=@title %></h4>
+<div class="pagination"><%= will_paginate models %></div>
 <table class="table table-striped">
   <tr>
     <th><%=t('Create Date')%></th>
